--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -110,7 +110,7 @@
                width: 12px;
                height: 12px;
                margin-right: 4px;
-
+               margin-bottom: 1px;
              }
             }
 
