--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -143,64 +143,61 @@
 	}
 
 
-	.ajax-save-done .shortpixel-icon.ok
-	{
-		width: 30px;
-		height: 30px;
-		align-items: start;
-		margin-right: 10px;
-	}
+
 	.ajax-save-done
 	{
 		 position: fixed;
-		 bottom: 0.8rem;
+		 bottom: 2em;
+		 transform: translateX(30%);
 		 width: 60%;
-	//	 height: 250px;
+		 height: 47px;
 		 background-color: #fff;
 		 border: 0px solid #000;
-		 left: 20%;
-		// border-radius-all: 25px;
-		 border-radius: 1rem;
+	//	 left: 20%;
+	//	 border-radius-all: 25px;
+		 border-radius: 0.7rem;
 		 box-shadow: 0 0.3rem 0.8rem 0.3rem grey;
 		 display: flex;
-		 flex-direction: column;
+		 flex-direction: row;
 		 //align-items: center;
 		 padding: 5px;
 		 z-index: 10;
-		 //height: 40px;
 		 transition: all 40s ease-out;
 		 margin-bottom: -1000px;
 		 &.show {
 			 margin: 0;
-			 transition: all 1s ease-in;
+			 transition: all 2s ease-in;
 
 		 }
+		.icon-container {
+			display: flex;
+			justify-content: left;
+			align-items: center;
+		}
 		.shortpixel-icon.ok
 		{
 			width: 30px;
 			height: 30px;
-			margin-right: 0.2rem;
+			//margin-right: 0.2rem;
 		}
 
-		 .icon
-		 {
-			//		width: 40px;
-			//		filter: brightness(0) saturate(100%) invert(45%) sepia(67%) saturate(439%) hue-rotate(100deg) brightness(99%) contrast(92%);
-		 }
+		.text-container {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			width: 100%;
+			padding-left: 0.5rem;
+		}
+
 		 h2 {
-				display: flex;
-			 	//align-items: center;
-			 	font-size: 20px;
-			 	margin: 0;
-			 	margin-bottom: 4px;
-				margin-left: 16px;
-			 	color: $green_highlight;
+			 font-size: 14px;
+			 margin: 0;
+			 color: $green_highlight;
 		 }
 		h3 {
-			margin-top: 0;
-			font-size: 14px;
-			margin-left: 52px;
-			color:$color-darkest;
+			font-size: 12px;
+			margin: 0;
+			color: $blue_closed;
 		}
 	}
 
