--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -618,23 +618,23 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .ajax-save-done {
   position: fixed;
   bottom: 2em;
-  transform: translateX(30%);
   width: 60%;
   height: 47px;
   background-color: #fff;
   border: 0px solid #000;
+  left: 20%;
   border-radius: 0.7rem;
   box-shadow: 0 0.3rem 0.8rem 0.3rem grey;
   display: flex;
   flex-direction: row;
   padding: 5px;
   z-index: 10;
-  transition: all 40s ease-out;
+  transition: all 1s ease-out;
   margin-bottom: -1000px;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done.show {
   margin: 0;
-  transition: all 2s ease-in;
+  transition: all 1s ease-in;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done .icon-container {
   display: flex;
@@ -642,8 +642,9 @@ div.spio-modal-title {
   align-items: center;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done .shortpixel-icon.ok {
-  width: 30px;
-  height: 30px;
+  width: 27px;
+  height: 27px;
+  margin: 15px 6px 15px 12px;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done .text-container {
   display: flex;
@@ -651,14 +652,15 @@ div.spio-modal-title {
   justify-content: center;
   width: 100%;
   padding-left: 0.5rem;
+  font-family: Roboto, sans-serif;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done h2 {
-  font-size: 14px;
+  font-weight: 600;
   margin: 0;
   color: #00C898;
 }
 .wrap.is-shortpixel-settings-page .ajax-save-done h3 {
-  font-size: 12px;
+  font-weight: 400;
   margin: 0;
   color: #116C7E;
 }
