--- a/res/scss/bulk/_dashboard.scss
+++ b/res/scss/bulk/_dashboard.scss
@@ -1,7 +1,9 @@
 /**** DASHBOARD ***/
     section.panel.dashboard
     {
-       max-width: 80%;
+       max-width: 90%;
+       margin: 20px auto;
+       border-radius: 16px 16px 0px 0px;
 
        h3.heading { border:0 ;
         }
@@ -66,6 +68,7 @@
 			 {
 
 					background-color: #C7EDF4;
+					border-radius: 16px 16px 0px 0px;
           h3 {
             font-size: 28px;
             font-weight: 700;
