--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -22,7 +22,8 @@
 
     h3.heading {
       margin: 15px 0 15px 0px;
-      padding-left: 10px;
+      padding-left: 15px;
+      padding-bottom: 12px;
       font-size: 20px;
       font-weight: 400;
       line-height: 42px;
@@ -253,10 +254,9 @@
         opacity: 0;
         transition: opacity 500ms ease-in;
         margin: 15px 0;
-				padding-bottom: 35px;
-				background: #fff;
-
-
+	padding-bottom: 35px;
+	background: #fff;
+	border-radius: 16px 16px 0px 0px;
 
         &.active
         {
@@ -264,6 +264,8 @@
             opacity: 1;
             z-index: 5;
             position: relative;
+            width: 95%;
+            margin: auto;
           //  box-shadow: 4px 4px 8px #116C7D;
         }
         .panel-container
@@ -313,8 +315,8 @@
        display: none;
        //top: 0;
     //   height: 50px;
-			 margin: 25px 0;
-       width: 90%;
+       margin: 25px auto;
+       width: 95%;
        background: rgba(31, 190,201, 1);
        border: 1px solid #ccc;
        font-size: 26px;
@@ -322,7 +324,7 @@
        padding: 26px 0;
        text-align: center;
        z-index: 10;
-       border-radius: 3px;
+       border-radius: 16px;
        cursor: pointer;
        transition: all 900ms;
        &:hover {
