--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -352,9 +352,9 @@
 			//	 border: 1px solid #ccc;
 				 line-height: 26px;
 				 padding: 20px 0;
-				 border-radius: 3px;
-				 margin: 25px 0;
-				 width: 90%;
+				 border-radius: 16px;
+				 margin: 25px auto;
+				 width: 95%;
 				 text-align: center;
 				 h3 {
 					font-size: 26px;
