--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -32,9 +32,9 @@
 
 
 	.button-primary, .button-primary:focus {
-		background-color: $color-darkest;
-		border-color: $color-darkest;
-		color: #fff;
+		//background-color: $color-darkest;
+		//border-color: $color-darkest;
+		//color: #fff;
 		&:hover
 		{
 			background-color: $color-dark;
