--- a/res/scss/elements/_header.scss
+++ b/res/scss/elements/_header.scss
@@ -5,21 +5,25 @@ header
     background: #fff;
     text-align: center;
     display: flex;
-    padding: 8px 16px;
     justify-content: space-between;
     align-items: center;
-    margin-left: -22px;
-    margin-top: -10px;
-    margin-right: -22px;
-    margin-bottom: 10px;
+    width: 95%;
+    margin: 10px auto;
+    border-radius: 16px;
+//    margin-left: -22px;
+//    margin-top: -10px;
+//    margin-right: -22px;
+//    margin-bottom: 10px;
+//    padding: 8px 16px;
 
     h1 {
       line-height: 50px;
     }
     img {
       vertical-align: bottom;
+      padding-bottom: 5px;
       margin-right: 8px;
-      margin-left: 1.1em;
+//      margin-left: 1.1em;
     }
 		.top-buttons
 		{
