--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -131,7 +131,7 @@ transition         : left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 
       content: "OFF";
       color: white;
       font-size: 10px;
-      top: 45%;
+      top: 9px;
       transform: translateY(-50%);
       right: 5px;
       transition: 0.4s;
