--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -122,15 +122,35 @@
   {
 	  //height: 180px;
 	  width: 220px;
+	  height: 270px;
 	  margin: 16px 9px 7px 2px;
+	  border-radius: 0.7rem;
 	  background-color: $blue_background;
 
-	  .banner-line-container {
+	  .robo-container {
 		  display: flex;
 		  flex-direction: row;
 		  align-items: center;
-		  margin-bottom: -1px;
-		  font-family: Roboto;
+
+	  }
+	  	.robo-from-banner{
+			margin-right: 8px;
+			margin-left: 10px;
+		}
+
+	  	h2{
+			font-family: Roboto, serif;
+			font-weight: 700;
+			color: $blue_closed;
+		}
+
+	  .banner-line-container {
+
+		  display: flex;
+		  flex-direction: row;
+		  align-items: center;
+		  height: 30px;
+		  font-family: Roboto, serif;
 		  font-weight: 400;
 		  color: $blue_closed;
 	  }
@@ -141,10 +161,26 @@
 			  margin-right: 8px;
 			  margin-left: 10px;
 		  }
-	      p {
 
+	   	button.upgrade{
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			width: 130px;
+			height: 30px;
+			//top: 160px;
+			margin-left: 13px;
+			margin-top: 13px;
+			 //padding: 6px 6px 6px 2px;
+			background: #ED332B;
+			//background: #ED3; // just for check ctrl+shift reload worked :)
 
-		  }
+	  }
+		.shortpixel-icon.cart{
+			height: 18px;
+			width: 18px;
+		}
+
   }
 
 
@@ -218,8 +254,7 @@
 		  	padding-left: 0.5rem;
 			font-family: Roboto, sans-serif;
       	}
-		h2
-        {
+		h2 {
 			//font-size: 14px;
 			font-weight: 600;
 		 	margin: 0;
